--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">Professional</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -69,7 +69,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>About</h1>
-              <p class="mb-0">Economista enfocada en análisis de datos con sólida experiencia en extracción, limpieza y modelado de datos estratégicos. Genero insights accionables que optimizan procesos y apoyan la toma de decisiones estratégicas, logrando ahorros significativos de tiempo mediante la automatización.</p>
+              <p class="mb-0">Economist specializing in data analysis with solid experience in extracting, cleaning, and modeling strategic data. I generate actionable insights that optimize processes and support strategic decision-making, achieving significant time savings through automation.</p>
             </div>
           </div>
         </div>
@@ -91,34 +91,33 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img1.png" class="img-fluid" alt="Profile Image">
           </div>
           <div class="col-lg-8 content">
-            <h2>Economist &amp; Data Analyst|, Data Scientist|.</h2>
+            <h2>Economist &amp; Data Analyst</h2>
             <p class="fst-italic py-3">
-              Estudiante de 9 ciclo de la Pontificie Universidad Católica del Perú
+              Final-year Economics student at the Pontificia Universidad Católica del Perú, specializing in microeconomics, econometrics, and data-driven decision-making.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>May 1, 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.yourwebsite.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+51 987 654 321</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lima, Peru</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's in Economics</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>youremail@example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              With a passion for economics and data, I have honed my skills in predictive modeling, data visualization, and econometric analysis. My goal is to contribute to impactful projects by leveraging my expertise in strategic data analysis and optimization.
             </p>
           </div>
         </div>
