--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img1.png" class="img-fluid" alt="Profile Image">
+            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="Profile Image">
           </div>
           <div class="col-lg-8 content">
             <h2>Economist &amp; Data Analyst</h2>
