--- a/about.html
+++ b/about.html
@@ -182,38 +182,70 @@
 
       <div class="col-lg-6">
 
-        <div class="progress">
-          <span class="skill"><span>Excel Macros</span> <i class="val">Advanced</i></span>
+<div class="progress">
+          <span class="skill"><span>Excel Macros</span> <i class="val">95%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
           </div>
         </div><!-- End Skills Item -->
 
         <div class="progress">
-          <span class="skill"><span>SQL</span> <i class="val">Intermediate</i></span>
+          <span class="skill"><span>SQL</span> <i class="val">75%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
           </div>
         </div><!-- End Skills Item -->
 
         <div class="progress">
-          <span class="skill"><span>Power BI</span> <i class="val">Intermediate</i></span>
+          <span class="skill"><span>Power BI</span> <i class="val">75%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
           </div>
         </div><!-- End Skills Item -->
 
         <div class="progress">
-          <span class="skill"><span>Python</span> <i class="val">Intermediate</i></span>
+          <span class="skill"><span>Python</span> <i class="val">75%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
           </div>
         </div><!-- End Skills Item -->
 
         <div class="progress">
-          <span class="skill"><span>R</span> <i class="val">Intermediate</i></span>
+          <span class="skill"><span>R</span> <i class="val">75%</i></span>
           <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
+      </div>
+
+      <div class="col-lg-6">
+
+        <div class="progress">
+          <span class="skill"><span>Microsoft Office</span> <i class="val">90%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
+        <div class="progress">
+          <span class="skill"><span>Stata</span> <i class="val">70%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
+        <div class="progress">
+          <span class="skill"><span>Matlab</span> <i class="val">50%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+          </div>
+        </div><!-- End Skills Item -->
+
+        <div class="progress">
+          <span class="skill"><span>Latex</span> <i class="val">50%</i></span>
+          <div class="progress-bar-wrap">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
           </div>
         </div><!-- End Skills Item -->
 
