--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
             <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="Profile Image">
           </div>
           <div class="col-lg-8 content">
-            <h2>Economist &amp; Data Analyst</h2>
+            <h2>Economist Data Analyst, &amp; Data Scientist</h2>
             <p class="fst-italic py-3">
               Final-year Economics student at the Pontificia Universidad Católica del Perú, specializing in microeconomics, econometrics, and data-driven decision-making.
             </p>
@@ -448,29 +448,23 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Personal</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Perfil</h3>
+      <p>La perseverancia y la resiliencia son las claves para superar desafíos y alcanzar nuestras metas.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Personal</strong> <span>All Rights Reserved</span>
+          <span>&copy; 2025</span> <strong class="px-1 sitename">Perfil</strong> <span>Todos los derechos reservados</span>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
     </div>
-  </footer>
+</footer>
+
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
