--- a/about.html
+++ b/about.html
@@ -448,8 +448,8 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Perfil</h3>
-      <p>La perseverancia y la resiliencia son las claves para superar desafíos y alcanzar nuestras metas.</p>
+      <h3 class="sitename">My Goals</h3>
+      <p>Perseverance and resilience are the keys to overcoming challenges and excelling in the fields of economics, financial inclusion, and data analysis.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
