--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/LC.png" rel="icon">
+  <link href="assets/img/LC_grande.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">Resume</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -52,9 +52,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html" class="active">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <!--<li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -71,7 +70,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>-->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -81,29 +80,79 @@
 
   <main class="main">
 
-    <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
-      <div class="heading">
-        <div class="container">
-          <div class="row d-flex justify-content-center text-center">
-            <div class="col-lg-8">
-              <h1>Resume</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-            </div>
-          </div>
+<!-- Page Title -->
+<div class="page-title" data-aos="fade">
+  <div class="heading">
+    <div class="container">
+      <div class="row d-flex justify-content-center text-center">
+        <div class="col-lg-8">
+          <h1>Resume</h1>
+          <p class="mb-0">Perseverance and dedication are at the core of my journey in economics, data analysis, and financial inclusion, driven by impactful contributions and innovative solutions.</p>
         </div>
       </div>
-      <nav class="breadcrumbs">
-        <div class="container">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Resume</li>
-          </ol>
-        </div>
-      </nav>
-    </div><!-- End Page Title -->
+    </div>
+  </div>
+  <nav class="breadcrumbs">
+    <div class="container">
+      <ol>
+        <li><a href="index.html">Home</a></li>
+        <li class="current">Resume</li>
+      </ol>
+    </div>
+  </nav>
+</div><!-- End Page Title -->
 
-    <!-- Resume Section -->
+<!-- Resume Section -->
+<section id="resume" class="resume section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="resume-title">Summary</h3>
+        <div class="resume-item pb-0">
+          <h4>Leydi Chipana</h4>
+          <p><em>Economics student in the top 10% at Pontificia Universidad Católica del Perú, specializing in statistics, microeconomics, and finance. Proficient in data analysis and strategic decision-making, with strong communication and interdisciplinary teamwork skills. Committed to continuous learning and driving value in multidisciplinary projects.</em></p>
+          <ul>
+            <li>Lima, Peru</li>
+            <li>+51 973148086</li>
+            <li><a href="mailto:chipana.l@pucp.edu.pe">chipana.l@pucp.edu.pe</a></li>
+          </ul>
+        </div><!-- End Resume Item -->
+
+        <h3 class="resume-title">Education</h3>
+        <div class="resume-item">
+          <h4>Bachelor in Economics</h4>
+          <h5>2020 - 2025</h5>
+          <p><em>Pontificia Universidad Católica del Perú, Lima, Peru</em></p>
+          <p>Relevant courses: Econometrics, Microeconomic Analysis, Research Seminar, and Academic Research Writing. Focus on econometric modeling and data-driven solutions for real-world challenges in Peru.</p>
+        </div><!-- End Resume Item -->
+      </div>
+
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="resume-title">Professional Experience</h3>
+        <div class="resume-item">
+          <h4>Subdirector of Marketing</h4>
+          <h5>Aug 2024 - Present</h5>
+          <p><em>Revista Económica, PUCP</em></p>
+          <ul>
+            <li>Led a multidisciplinary team to develop automated Power BI reports, reducing reporting time by 40%.</li>
+            <li>Implemented daily publication tracking automation using Excel macros, optimizing the process by 75%.</li>
+          </ul>
+        </div><!-- End Resume Item -->
+
+        <div class="resume-item">
+          <h4>Volunteer in Marketing</h4>
+          <h5>Apr 2024 - Aug 2024</h5>
+          <p><em>Revista Económica, PUCP</em></p>
+          <ul>
+            <li>Transformed and cleaned data from digital publications using SQL, ensuring consistency and accuracy in analyses.</li>
+            <li>Designed interactive dashboards in Power BI to monitor key metrics, optimizing strategic decision-making by 25%.</li>
+          </ul>
+        </div><!-- End Resume Item -->
+      </div>
+    </div>
+  </div>
+</section><!-- End Resume Section -->
+
     <section id="resume" class="resume section">
 
       <div class="container">
