--- a/resume.html
+++ b/resume.html
@@ -135,30 +135,34 @@
       </div>
 
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="resume-title">Professional Experience</h3>
-        <div class="resume-item">
-          <h4>Subdirector of Marketing</h4>
-          <h5>2024 - 2025</h5>
-          <p><em>Revista Económica, PUCP</em></p>
-          <ul>
-            <li>Led a multidisciplinary team to develop automated Power BI reports, reducing reporting time by 40%.</li>
-            <li>Implemented daily publication tracking automation using Excel macros, optimizing the process by 75%.</li>
-          </ul>
-        </div><!-- End Resume Item -->
+  <h3 class="resume-title">Professional Experience</h3>
 
-        <div class="resume-item">
-          <h4>Volunteer in Marketing</h4>
-          <h5>Apr 2024 - Aug 2024</h5>
-          <p><em>Revista Económica, PUCP</em></p>
-          <ul>
-            <li>Transformed and cleaned data from digital publications using SQL, ensuring consistency and accuracy in analyses.</li>
-            <li>Designed interactive dashboards in Power BI to monitor key metrics, optimizing strategic decision-making by 25%.</li>
-          </ul>
-        </div><!-- End Resume Item -->
-      </div>
-    </div>
-  </div>
+  <div class="resume-item">
+    <h4>Subdirector of Marketing</h4>
+    <h5>2024 - 2025</h5>
+    <p><em>Revista Económica, PUCP</em></p>
+    <ul>
+      <li>Led a multidisciplinary team to develop automated Power BI reports, reducing reporting time by 40%.</li>
+      <li>Implemented daily publication tracking automation using Excel macros, optimizing the process by 75%.</li>
+      <li>Automated weekly performance reports using Python scripts, saving 10 hours per month in manual work.</li>
+    </ul>
+  </div><!-- End Resume Item -->
+
+  <div class="resume-item">
+    <h4>Volunteer in Marketing</h4>
+    <h5>Apr 2024 - Aug 2024</h5>
+    <p><em>Revista Económica, PUCP</em></p>
+    <ul>
+      <li>Transformed and cleaned data from digital publications using SQL, ensuring consistency and accuracy in analyses.</li>
+      <li>Designed interactive dashboards in Power BI to monitor key metrics, optimizing strategic decision-making by 25%.</li>
+      <li>Analyzed audience engagement metrics, identifying trends that increased content visibility by 20%.</li>
+    </ul>
+  </div><!-- End Resume Item -->
+
+</div>
+</div>
 </section><!-- End Resume Section -->
+
 
   </main>
 
