--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@
       <div class="row d-flex justify-content-center text-center">
         <div class="col-lg-8">
           <h1>Resume</h1>
-          <p class="mb-0">I am Leydi, an aspiring economist and data analyst passionate about working with organizations and projects that want to maximize the potential of their data. From designing robust data strategies and processing large datasets to conducting in-depth analysis and delivering actionable insights, I strive to bridge the gap between data and decision-making to address complex economic challenges.</p>
+          <p class="mb-0">Economist specializing in data analysis with solid experience in extracting, cleaning, and modeling strategic data. I generate actionable insights that optimize processes and support strategic decision-making, achieving significant time savings through automation.</p>
         </div>
       </div>
     </div>
