--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Personal</h1>
+        <h1 class="sitename">Portafolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -69,8 +69,6 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul> -->
-          </li>
-          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -83,13 +81,12 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/2.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/5.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Leydi Chipana</h2>
-        <p>I'm <span class="typed" data-typed-items="Economist, Data Analyst, Data Scientist">Photographer</span><span class="typed-cursor typed-cursor--blink"></span></p>
-        <div class="social-links">
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+        <p>I'm <span class="typed" data-typed-items="Economist, Data Analyst, Data Scientist">Economist</span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>Have fun in browsing through the content and thank you for visiting!</p>
         </div>
       </div>
 
@@ -99,10 +96,11 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Leydi Chipana</h3>
-      <p>This is my favorite part about analytics: Taking boring flat data and bringing it to life through visualization.</p>
+      <h3 class="sitename">Contact</h3>
+      <p>I am available for short-term projects and part-time longer-term engagements..</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
