--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Leydi Chipana</h2>
         <p>I'm <span class="typed" data-typed-items="Economist, Data Analyst, Data Scientist">Economist</span><span class="typed-cursor typed-cursor--blink"></span></p>
-        <p>Have fun in browsing through the content and thank you for visiting!</p>
+        <!-- Styled "Have fun" message -->
+        <p style="font-family: 'Courier New', Courier, monospace; font-size: 1.2rem; font-style: italic;">
+        Have fun in browsing through the content and thank you for visiting!
+        </p>
         </div>
       </div>
 
@@ -101,6 +104,7 @@
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="chipana.l@pucp.edu.pe" target="_blank"><i class="bi bi-gmail"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
