--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/leydi-conzuelo-chipana-cangana-1b8202326/" target="_blank"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/MandarineLab" target="_blank"><i class="bi bi-github"></i></a>
-        <a href="chipana.l@pucp.edu.pe" target="_blank"><i class="bi bi-gmail"></i></a>
+        <a href="chipana.l@pucp.edu.pe" target="_blank"><i class="bi bi-email"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
